--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "dreingineer ",
   "license": "ISC",
   "type": "module",
-  "devDependencies": {
+  "dependencies": {
     "nodemon": "^2.0.7"
   }
 }
