--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "dreingineer ",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^2.0.7"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "socket.io": "^4.1.2"
   }
 }
