--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "request-promise": "^4.2.6",
     "socket.io": "^4.1.2"
