--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server",
-    "dev": "nodemon server"
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "dreingineer ",
@@ -19,6 +19,7 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "request-promise": "^4.2.6",
-    "socket.io": "^4.1.2"
+    "socket.io": "^4.1.2",
+    "node": "10.16.0"
   }
 }
