--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "request-promise": "^4.2.6",
-    "socket.io": "^4.1.2",
+    "socket.io": "^4.1.2"
   }
 }
