--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
+    "nedb": "^1.8.0",
     "node": "^10.16.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
