--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "dreingineer ",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -19,6 +20,8 @@
     "nedb": "^1.8.0",
     "node": "^10.16.1",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.2",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.7",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
